# Geo-BTC

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  teste.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
configs/: __init__.py  config.yaml  paths.py
data/: README.md
data/processed/: bitstamp_daily_final.csv
data/raw/: bitstamp_cleaned.csv
docs/: DATA.md  METHODOLOGY.md  MODEL_ARCHITECTURE.md  REPRODUCIBILITY.md
models/: README.md  final_lstm.keras
notebooks/: Geo-BTC-LSTM_Model.ipynb  README.md  pedictionlive.ipynb
reports/: README.md  TR-04.md  TR-05.md
reports/figures/: inference_storyboard_2015.html
results/: README.md  analysis_residuals_2015.csv  explaining_ratio.csv  grid_search_results.csv  inference_table.csv  investigation_periods.csv
scripts/: __init__.py  run_explaining_ratio.py  run_grid_search.py  run_inference_merge.py  run_inference_plot.py  run_pipeline.py  run_preprocessing.py  run_residual_analysis.py  run_train_baseline.py  run_train_final.py  run_train_tuned.py
src/: __init__.py
src/analysis/: __init__.py  outliers.py  residuals.py
src/data/: __init__.py  load_data.py  split.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  scaling.py  windowing.py
src/inference/: __init__.py  merge.py  metrics.py  plot.py
src/models/: __init__.py  baseline.py  final_model.py  grid_search.py  tuned.py
src/utils/: __init__.py  config.py  logging.py  seed.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py  test_analysis.py  test_data.py  test_evaluation.py  test_features.py  test_inference.py
